[docs] live query example

--- a/docs/modules/ROOT/pages/objc.adoc
+++ b/docs/modules/ROOT/pages/objc.adoc
@@ -790,6 +790,24 @@ In the `OrderBy` array, use a string of the form `Rank(X)`, where `X` is
 the property or expression being searched, to represent the ranking of
 the result.
 
+Live Query
+~~~~~~~~~~
+
+A live query stays active and monitors the database and query index for changes. When there's a change it re-runs itself automatically, and if the query results changed it notifies any observers. A live query is a great way to build reactive user interfaces, especially table/list views, that keep themselves up to date. For example, as the replicator runs and pulls new data from the server, a live query-driven UI will automatically update to show the data without the user having to manually refresh. This helps your app feel quick and responsive.
+
+[source,objectivec]
+----
+include::{examplesdir}/SampleCodeTest.m[tags=live-query]
+----
+<1> The live query starts immediately and changes are posted asynchronously.
+
+The following example stops the live query with the token from the previous example.
+
+[source,objectivec]
+----
+include::{examplesdir}/SampleCodeTest.m[tags=stop-live-query]
+----
+
 Replication
 ~~~~~~~~~~~
 
