--- a/docs/modules/ROOT/pages/objc.adoc
+++ b/docs/modules/ROOT/pages/objc.adoc
@@ -117,7 +117,7 @@ Upgrading
 Xcode
 ^^^^^
 
-The public facing API has completely changed in Couchbase Lite 2.0 and will require a re-write to upgrade an application that is using Couchbase Lite 1.x. To update an Xcode project built with Couchbase Lite 1.x:
+The API has changed in Couchbase Lite 2.0 and will require porting an application that is using Couchbase Lite 1.x API to the Couchbase Lite 2.0 API. To update an Xcode project built with Couchbase Lite 1.x:
 
 * Remove the existing *CouchbaseLite.framework* dependency from the Xcode project.
 * Remove all the Couchbase Lite 1.x dependencies (see the link:https://developer.couchbase.com/documentation/mobile/1.5/installation/ios/index.html#ios-amp-tvos[1.x installation guide]).
@@ -127,11 +127,9 @@ The public facing API has completely changed in Couchbase Lite 2.0 and will requ
 Database Upgrade
 ^^^^^^^^^^^^^^^^
 
-Databases that were created with Couchbase Lite 1.2 or later can be
-read using the 2.0 API. Upon detecting it is a 1.x database file format,
-Couchbase Lite will automatically upgrade it to the new format used in
-2.0. This feature is only available for the default storage type (i.e
-not for ForestDB databases). Additionally, the automatic migration
+Databases that were created with Couchbase Lite 1.2 or later can be used with Couchbase Lite 2.0. Upon detecting it is a 1.x database file,
+Couchbase Lite will automatically upgrade it to 2.0. This feature is only available for the default storage type (i.e
+not a ForestDB database). Additionally, the automatic migration
 feature does not support encrypted databases, so if the 1.x database is
 encrypted you will first need to disable encryption using the Couchbase
 Lite 1.x API (see the
@@ -140,14 +138,11 @@ Database Guide]).
 
 ===== Handling of Existing Conflicts
 
-The automatic upgrade functionality does not copy any conflicting
-revisions to the new database. The motivation for this functionality is
-related to the way conflicts are being handled in Couchbase Lite 2.0
-(see link:swift.html#_handling_conflicts[Handling Conflicts]). Optionally, existing conflicts in the 1.x database can be resolved with the link:https://developer.couchbase.com/documentation/mobile/1.5/guides/couchbase-lite/native-api/revision/index.html[1.x API] prior to the database being upgraded to 2.0.
+For conflicts in the 1.x database, the automatic upgrade process copies the default winning revision to the new 2.0 database and does NOT copy any conflicting revisions. This functionality is related to the way conflicts are being handled in Couchbase Lite 2.0 (see link:swift.html#_handling_conflicts[Handling Conflicts]). Optionally, existing conflicts in the 1.x database can be resolved with the link:https://developer.couchbase.com/documentation/mobile/1.5/guides/couchbase-lite/native-api/revision/index.html[1.x API] prior to the database being upgraded to 2.0.
 
 ===== Handling of Existing Attachments
 
-Attachments that were persisted in the 1.x database file will be copied to the 2.0 database file. Note that in Couchbase Lite 2.0, the `Attachment` API has been renamed to `Blob` API. The functionally is essentially identical but the internal schema for attachments has changed. In 1.x they were stored under the `_attachments` field and in Couchbase Lite 2.0 they will be stored like other value types. The automatic upgrade functionality will not update the internal schema for attachments, so they will still be accessible under the `_attachments` field. The following example shows how to retrieve an attachment that was created in a 1.x database with the 2.0 API.
+Attachments that were persisted in the 1.x database will be copied to the 2.0 database. In Couchbase Lite 2.0, the `Attachment` API has been renamed to `Blob` API. The functionally is identical but the internal schema for attachments has changed. In 1.x they were stored under the `_attachments` field and in Couchbase Lite 2.0 they are stored anywhere in the document like other value types. The automatic upgrade functionality will not update the internal schema for attachments, so they will still be accessible under the `_attachments` field. The following example shows how to retrieve an attachment that was created in a 1.x database with the 2.0 API.
 
 [source,objectivec]
 ----
@@ -157,9 +152,9 @@ include::{examplesdir}/SampleCodeTest.m[tags=1x-attachment]
 Replication
 ^^^^^^^^^^^
 
-The replication protocol used in Couchbase Lite 2.0 has been re-designed from the ground up and it is not backwards compatible with the 1.x replication protocol. Therefore, to use replication with Couchbase Lite 2.0, the target Sync Gateway instance must also be upgraded to 2.0.
+The replication protocol used in Couchbase Lite 2.0 has been re-designed from the ground up and it is not backwards compatible with the 1.x replication protocol. Therefore, to use replication with Couchbase Lite 2.x, the target Sync Gateway instance must also be upgraded to 2.x.
 
-Sync Gateway 2.0 will continue to accept clients that connect through the 1.x protocol. It will automatically use the 1.x replication protocol when a Couchbase Lite 1.x client connects through "http://localhost:4984/db" and the 2.0 replication protocol when a Couchbase Lite 2.0 client connects through "ws://localhost:4984/db". This allows for a smoother transition to get all your user base onto a version of your application built with Couchbase Lite 2.0.
+Sync Gateway 2.x will continue to accept clients that connect through the 1.x protocol. It will automatically use the 1.x replication protocol when a Couchbase Lite 1.x client connects through "http://localhost:4984/db" and the 2.0 replication protocol when a Couchbase Lite 2.0 client connects through "ws://localhost:4984/db". This allows for a smoother transition to get all your user base onto a version of your application built with Couchbase Lite 2.x.
 
 Database
 ~~~~~~~~
@@ -186,9 +181,7 @@ object such as the database directory.
 Finding a Database File
 ^^^^^^^^^^^^^^^^^^^^^^^
 
-When the application is running on the iOS simulator, you can easily
-locate the application's sandbox directory using the
-https://simpholders.com/3/[SimPholders] utility.
+When the application is running on the iOS simulator, you can locate the application's sandbox directory using the https://simpholders.com/3/[SimPholders] utility.
 
 CLI tool
 ^^^^^^^^
@@ -239,7 +232,7 @@ In Couchbase Lite, a document's body takes the form of a JSON object — a
 collection of key/value pairs where the values can be different types of
 data such as numbers, strings, arrays or even nested objects. Every
 document is identified by a document ID, which can be automatically
-generated (as a UUID) or determined by the application; the only
+generated (as a UUID) or specified programmatically; the only
 constraints are that it must be unique within the database, and it can't
 be changed.
 
@@ -300,12 +293,11 @@ using the `document.date(forKey: String)` accessor method.
 include::{examplesdir}/SampleCodeTest.m[tags=date-getter]
 ----
 
-If the property doesn't exist in the document it will return the default
-value for that getter method (0 for `getInt`, 0.0 for `getFloat` etc.).
-To check whether a given property exists in the document, you should use
-the
-http://docs.couchbase.com/mobile/2.0/couchbase-lite-objc/db022/Classes/CBLDocument.html[`[Document contains:key]`]
-method.
+If the property doesn't exist in the document it will return the default value for that
+ getter method (0 for `getInt`, 0.0 for `getFloat` etc.).
+
+If you need to determine whether a given property exists in the document, you should
+use the http://docs.couchbase.com/mobile/2.0/couchbase-lite-objc/db022/Classes/CBLDocument.html[`[Document contains:key]`] method.
 
 Batch operations
 ^^^^^^^^^^^^^^^^
@@ -349,6 +341,8 @@ In the example above, "image/jpeg" is the MIME type and "avatar" is the
 key which references that `Blob`. That key can be used to retrieve the
 `Blob` object at a later time.
 
+On Couchbase Lite, blobs can be arbitrarily large, and are only read on demand, not when you load a `Document` object. On Sync Gateway, the maximum content size is 20 MB per blob. If a document's blob is over 20 MB, the document will be replicated but not the blob.
+
 When a document is synchronized, the Couchbase Lite replicator will add
 an `_attachments` dictionary to the document's properties if it contains
 a blob. A random access name will be generated for each `Blob` which is
@@ -372,9 +366,9 @@ Query
 ~~~~~
 
 Database queries have changed significantly. Instead of the map/reduce
-algorithm used in 1.x, they're now based on expressions, of the form
+views used in 1.x, they're now based on expressions, of the form
 "return ____ from documents where ____, ordered by ____", with semantics
-based on Couchbase Server's N1QL query language.
+based on Couchbase's N1QL query language.
 
 There are several parts to specifying a query:
 
@@ -387,47 +381,12 @@ documents.
 * GROUP BY: specifies the query criteria to group rows by.
 * ORDER BY: specifies the query criteria to sort the rows in the result.
 
-Indexing
-^^^^^^^^
-
-Before we begin querying documents, let's briefly mention the importance
-of having a query index. A query can only be fast if there's a
-pre-existing database index it can search to narrow down the set of
-documents to examine.
-
-The following example creates a new index for the `type` and `name`
-properties.
-
-[source,json]
-----
-{
-    "_id": "hotel123",
-    "type": "hotel",
-    "name": "Apple Droid"
-}
-----
-
-[source,objectivec]
-----
-include::{examplesdir}/SampleCodeTest.m[tags=query-index]
-----
-
-If there are multiple expressions, the first one will be the primary
-key, the second the secondary key, etc.
-
-*Note:* Every index has to be updated whenever a document is updated, so
-too many indexes can hurt performance. Thus, good performance depends on
-designing and creating the _right_ indexes to go along with your
-queries.
-
 SELECT statement
 ^^^^^^^^^^^^^^^^
 
 With the SELECT statement, you can query and manipulate JSON data. With
 projections, you retrieve just the fields that you need and not the
-entire document. This is especially useful when querying for a large
-dataset as it results in shorter processing times and better
-performance.
+entire document.
 
 A SelectResult represents a single return value of the query statement.
 Documents in Couchbase Lite comprise of the document properties
@@ -579,8 +538,7 @@ MUSEUM" and so on.
 include::{examplesdir}/SampleCodeTest.m[tags=query-like-operator]
 ----
 
-Wildcard Match
-++++++++++++++
+==== Wildcard Match
 
 We can use `%` sign within a `like` expression to do a wildcard match
 against zero or more characters. Using wildcards allows you to have some
@@ -599,7 +557,7 @@ boundaries.
 include::{examplesdir}/SampleCodeTest.m[tags=query-like-operator-wildcard-match]
 ----
 
-Wildcard Character Match
+==== Wildcard Character Match
 
 We can use `_` sign within a like expression to do a wildcard match
 against a single character.
@@ -615,8 +573,8 @@ The following query will return "landmark" `type` documents with the
 include::{examplesdir}/SampleCodeTest.m[tags=query-like-operator-wildcard-character-match]
 ----
 
-Regex Match
-+++++++++++
+Regex Operator
+++++++++++++++
 
 The `regex` expression can be used for case sensitive matches. Similar
 to wildcard `like` expressions, `regex` expressions based pattern
@@ -706,6 +664,57 @@ Annan
 Ardèche
 Armagh
 Avignon
+----
+
+Indexing
+^^^^^^^^
+
+Before we begin querying documents, let's briefly mention the importance
+of having a query index. A query can only be fast if there's a
+pre-existing database index it can search to narrow down the set of
+documents to examine.
+
+The following example creates a new index for the `type` and `name`
+properties.
+
+[source,json]
+----
+{
+    "_id": "hotel123",
+    "type": "hotel",
+    "name": "Apple Droid"
+}
+----
+
+[source,objectivec]
+----
+include::{examplesdir}/SampleCodeTest.m[tags=query-index]
+----
+
+If there are multiple expressions, the first one will be the primary
+key, the second the secondary key, etc.
+
+*Note:* Every index has to be updated whenever a document is updated, so
+too many indexes can hurt performance. Thus, good performance depends on
+designing and creating the _right_ indexes to go along with your
+queries.
+
+Change Events
+^^^^^^^^^^^^^
+
+A live query stays active and monitors the database for changes. When there's a change it re-runs itself automatically, and if the query results changed it notifies any observers. A live query is a great way to build reactive user interfaces, especially table/list views, that keep themselves up to date. For example, as the replicator runs and pulls new data from the server, a live query-driven UI will automatically update to show the data without the user having to manually refresh. This helps your app feel quick and responsive.
+
+[source,objectivec]
+----
+include::{examplesdir}/SampleCodeTest.m[tags=live-query]
+----
+<1> The live query starts immediately and changes are posted asynchronously.
+
+The following example stops the live query with the token from the previous example.
+
+[source,objectivec]
+----
+include::{examplesdir}/SampleCodeTest.m[tags=stop-live-query]
 ----
 
 Full-Text Search
@@ -818,35 +827,16 @@ Ordering results
 
 It's very common to sort full-text results in descending order of
 relevance. This can be a very difficult heuristic to define, but
-Couchbase Lite comes with a fairly simple ranking function you can use.
+Couchbase Lite comes with a ranking function you can use.
 In the `OrderBy` array, use a string of the form `Rank(X)`, where `X` is
 the property or expression being searched, to represent the ranking of
 the result.
-
-Live Query
-~~~~~~~~~~
-
-A live query stays active and monitors the database for changes. When there's a change it re-runs itself automatically, and if the query results changed it notifies any observers. A live query is a great way to build reactive user interfaces, especially table/list views, that keep themselves up to date. For example, as the replicator runs and pulls new data from the server, a live query-driven UI will automatically update to show the data without the user having to manually refresh. This helps your app feel quick and responsive.
-
-[source,objectivec]
-----
-include::{examplesdir}/SampleCodeTest.m[tags=live-query]
-----
-<1> The live query starts immediately and changes are posted asynchronously.
-
-The following example stops the live query with the token from the previous example.
-
-[source,objectivec]
-----
-include::{examplesdir}/SampleCodeTest.m[tags=stop-live-query]
-----
 
 Replication
 ~~~~~~~~~~~
 
 Couchbase Mobile 2.0 uses a new replication protocol based on
-WebSockets. This protocol has been designed to be fast, efficient,
-easier to implement, and symmetrical between the client and server.
+WebSockets.
 
 Compatibility
 ^^^^^^^^^^^^^
@@ -911,8 +901,8 @@ explicitly enable them in the load balancer's configuration (see
 https://developer.couchbase.com/documentation/mobile/1.5/guides/sync-gateway/nginx/index.html[Load
 Balancers]).
 
-By default, the WebSocket protocol uses compression to optimize over
-speed and bandwidth. The level of compression is set on Sync Gateway and
+By default, the WebSocket protocol uses compression to optimize for
+speed and bandwidth utilization. The level of compression is set on Sync Gateway and
 can be tuned in the configuration file
 (link:../guides/sync-gateway/config-properties/index.html#2.0/replicator_compression[`replicator_compression`]).
 
@@ -990,8 +980,7 @@ Couchbase Lite replicator and thus will trigger a connection retry.
 Handling Conflicts
 ~~~~~~~~~~~~~~~~~~
 
-Starting in Couchbase Lite 2.0, document conflicts must be resolved
-using automatic conflict resolution or in the application. This
+In Couchbase Lite 2.0, document conflicts are automatically resolved. This
 functionality aims to simplify the default behavior of conflict handling
 and save disk space (conflicting revisions will no longer be stored in
 the database). There are 2 different `save` method signatures to specify
@@ -1024,8 +1013,7 @@ Database Replicas
 Database replicas is available in the *Enterprise Edition* only
 (https://www.couchbase.com/downloads). Starting in Couchbase Lite 2.0,
 replication between two local databases is now supported. It allows a
-Couchbase Lite replicator to store data on secondary storage that can
-then be ported to a different device. It would be especially useful in
+Couchbase Lite replicator to store data on secondary storage. It would be especially useful in
 scenarios where a user's device is damaged and the data needs to be
 moved to a different device. Note that the code below won't compile if
 you're running the *Community Edition* of Couchbase Lite.
